# CrewAI

./: .editorconfig  .env  .gitignore  ConsultaSerApi.py  empresas.db  empresas_multimarcas_colombo_20260302_223401.csv  empresas_multimarcas_colombo_20260302_223401.json  main.py  pyproject.toml  relatorio_empresas_colombo_20260302_223401.txt  requirements.txt
Database/: empresas.db
Outros/: agente_pesquisador_florestal.py
Scripts/: ConsultaSerApi.py  CriarDataBase.py  agente_banco.py
Scripts/Agentes/: AgenteEmpresas.py  ScrapperConcorrenteMultimarcas.py
