[project]
name = "meu-projeto-crewai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai>=1.9.3",
    "crewai-tools>=1.9.3",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastapi-sso>=0.21.0",
    "litellm>=1.75.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "types-beautifulsoup4>=4.12.0.20250516",
]
